--- a/client/game/game.css
+++ b/client/game/game.css
@@ -11,11 +11,41 @@
     color: maroon;
 }
 
-.board {
-    display: table;
+.scoreboard-wrap {
+    flex-grow: 1;
+    height: 100%;
+    width: 100%;
+    margin-right: 1em;
+    overflow: hidden;
+    border-radius: 5px;
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
 }
 
-.board__square {
-    display: table-cell;
-    width: 2%;
+.score {
+    display: flex;
+    flex: 1 0 100px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 1.5em 1em;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.leaderboard {
+    display: flex;
+    flex: 1 0 300px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 1.5em 1em;
+    border-radius: 5px;
+    text-align: center;
 }
