--- a/client/game/game.css
+++ b/client/game/game.css
@@ -11,7 +11,45 @@
     color: maroon;
 }
 
+.game-wrap {
+    flex-grow: 1;
+    height: 100%;
+    width: 100%;
+    margin-right: 1em;
+    overflow: hidden;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.board {
+    display: flex;
+    flex: 1 0 500px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 1.5em 1em;
+    border-radius: 5px;
+    text-align: center;
+}
 .scoreboard-wrap {
+    flex-grow: 1;
+    height: 100%;
+    flex: 1 0 460px;
+    margin-right: 1em;
+    overflow: hidden;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
+.leaderboard__wrap {
     flex-grow: 1;
     height: 100%;
     width: 100%;
@@ -24,6 +62,18 @@
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
+}
+
+.leaderboard__current, .leaderboard__halloffame {
+    display: flex;
+    flex: 1 0 100px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 1.5em 1em;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .score {
