--- a/client/game/game.css
+++ b/client/game/game.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+}
+
+canvas {
+    margin: 5px;
+}
 .signup__input {
     width: 300px;
     padding: 4px;
@@ -15,9 +22,7 @@
     flex-grow: 1;
     height: 100%;
     width: 100%;
-    margin-right: 1em;
     overflow: hidden;
-    border-radius: 5px;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -31,17 +36,13 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 1.5em 1em;
-    border-radius: 5px;
     text-align: center;
 }
 .scoreboard-wrap {
     flex-grow: 1;
     height: 100%;
     flex: 1 0 460px;
-    margin-right: 1em;
     overflow: hidden;
-    border-radius: 5px;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -53,9 +54,7 @@
     flex-grow: 1;
     height: 100%;
     width: 100%;
-    margin-right: 1em;
     overflow: hidden;
-    border-radius: 5px;
     display: flex;
     width: 100%;
     flex-flow: row wrap;
@@ -71,8 +70,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 1.5em 1em;
-    border-radius: 5px;
     text-align: center;
 }
 
@@ -83,8 +80,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 1.5em 1em;
-    border-radius: 5px;
     text-align: center;
 }
 
@@ -95,7 +90,33 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 1.5em 1em;
-    border-radius: 5px;
     text-align: center;
+}
+
+.direction-btn {
+    font-size: 30px;
+    height: 80px;
+    width: 80px;
+    padding: 14px;
+    margin: 30px;
+}
+
+#up {
+    margin: 0 30px 15px;
+}
+
+
+.leaderboard__current, .leaderboard__halloffame {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.leaderboard__current tr {
+    padding: 5px;
+}
+
+.leaderboard__current td, .leaderboard__halloffame td, .leaderboard__current th, .leaderboard__halloffame th {
+    display: table-cell;
+    width: auto;
+    border: 1px solid black;
 }
