--- a/client/index.less
+++ b/client/index.less
@@ -1,16 +1,16 @@
-#limit-container{
-  position: relative;
-  top: 0;
-  bottom: 0;
-  min-height: 100%;
-  min-width: 100%;
+#navigation-bar{
+  margin-bottom: 0px;
 }
-#home-page{
-  position: absolute;
+
+#limit-container{
+  background-size: cover;
+  display: block;
+  position: sticky;
   top: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  right: 0;
+  left: 0;
+  height: 100%;
   background: url(http://img33.imageshack.us/img33/2389/adventureconcept3i.jpg) no-repeat center center fixed;
   // -webkit-background-size: cover;
   //    -moz-background-size: cover;
@@ -21,6 +21,25 @@
        -o-filter: sepia(60%) contrast(200%);
          -filter: sepia(60%) contrast(200%);
   box-shadow: inset 1.9em 2.9em 16em 1em rgb(77, 69, 23), inset -16em -2.9em 16em 1em rgb(77, 69, 23);
-  margin-top: 50px;
-  background-color: black;  
+  background-color: black;
+}
+// #home-page{
+//   width: 100%;
+//   min-height: 100%;
+//   bottom:0;
+//   color: white;
+//   margin: auto;
+// }
+.cta-container{
+    #cta-play.text-center{
+      padding-top: 20%;
+      color: white;
+ 
+      div .text-center{
+        font-size: 6em;
+      }
+    }
+    #cta-container.text-center{
+      margin-top: 100px;
+    }
 }
