--- a/client/index.less
+++ b/client/index.less
@@ -35,11 +35,20 @@
       padding-top: 20%;
       color: white;
  
-      div .text-center{
-        font-size: 6em;
+      div #np-logo{
+        margin-top: 5%;
+        max-width: 800px;
+        box-shadow: 0 0 .5em white;
       }
     }
-    #cta-container.text-center{
+    #cta-container.text-center #cto-button{
       margin-top: 100px;
+      background-color: rgb(98, 215, 68);
+      padding: 1em 5em;
+      border: 4px solid black;
+
+      a{
+        color: black;
+      }
     }
 }
