--- a/client/index.less
+++ b/client/index.less
@@ -1,5 +1,11 @@
-#navigation-bar{
+.navbar.navbar-default{
   margin-bottom: 0px;
+  background-color: black;
+  border: black;
+}
+#short-navbar{
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 #limit-container{
@@ -12,10 +18,6 @@
   left: 0;
   height: 100%;
   background: url(http://img33.imageshack.us/img33/2389/adventureconcept3i.jpg) no-repeat center center fixed;
-  // -webkit-background-size: cover;
-  //    -moz-background-size: cover;
-  //      -o-background-size: cover;
-  //         background-size: cover;
   -webkit-filter: contrast(250%) sepia(50%);
      -moz-filter: sepia(60%) contrast(200%);
        -o-filter: sepia(60%) contrast(200%);
@@ -23,20 +25,14 @@
   box-shadow: inset 1.9em 2.9em 16em 1em rgb(77, 69, 23), inset -16em -2.9em 16em 1em rgb(77, 69, 23);
   background-color: black;
 }
-// #home-page{
-//   width: 100%;
-//   min-height: 100%;
-//   bottom:0;
-//   color: white;
-//   margin: auto;
-// }
+
 .cta-container{
     #cta-play.text-center{
-      padding-top: 20%;
+      // padding-top: 20%;
       color: white;
  
       div #np-logo{
-        margin-top: 5%;
+        margin-top: 20%;
         max-width: 800px;
         box-shadow: 0 0 .5em white;
       }
@@ -51,4 +47,27 @@
         color: black;
       }
     }
+}
+
+#leader-scores{
+  min-height: 100px;
+  // -webkit-transform-style: preserve-3d;
+  //    -moz-transform-style: preserve-3d;
+  //         transform-style: preserve-3d;
+
+  // .align-vertical{
+  //   position: relative;
+  //   top: 50%;
+  //   transform: translateY(-50%);
+  // }
+}
+
+.footer {
+  margin-top: 30px;
+  // width: 100%;
+  height: 60px;
+
+  .container{
+    vertical-align: center;
+  }
 }
