--- a/client/index.less
+++ b/client/index.less
@@ -1,3 +1,6 @@
+.container{
+  padding: 10px 0px;
+}
 .navbar.navbar-default{
   margin-bottom: 0px;
   background-color: black;
@@ -8,59 +11,70 @@
   margin: 0 auto;
 }
 
-#limit-container{
+#landing-main{
+  background: url(http://img33.imageshack.us/img33/2389/adventureconcept3i.jpg) no-repeat center center fixed;
   background-size: cover;
+  background-color: black;
   display: block;
-  position: sticky;
+  position: inherit;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   height: 100%;
-  background: url(http://img33.imageshack.us/img33/2389/adventureconcept3i.jpg) no-repeat center center fixed;
   -webkit-filter: contrast(250%) sepia(50%);
      -moz-filter: sepia(60%) contrast(200%);
        -o-filter: sepia(60%) contrast(200%);
          -filter: sepia(60%) contrast(200%);
   box-shadow: inset 1.9em 2.9em 16em 1em rgb(77, 69, 23), inset -16em -2.9em 16em 1em rgb(77, 69, 23);
-  background-color: black;
 }
 
-.cta-container{
-    #cta-play.text-center{
-      // padding-top: 20%;
-      color: white;
- 
-      div #np-logo{
-        margin-top: 20%;
-        max-width: 800px;
-        box-shadow: 0 0 .5em white;
-      }
-    }
-    #cta-container.text-center #cto-button{
-      margin-top: 100px;
-      background-color: rgb(98, 215, 68);
-      padding: 1em 5em;
-      border: 4px solid black;
+#landing-content{
+  // background-color: 
+  width: 100%;
+  min-height: 100%;
+  bottom: 0;
+  padding-top: 200px;
+  padding-bottom: 25px;
+  margin: auto;
+}
+#np-logo{
+  max-width: 640px;
+  margin: 40px auto;
+  box-shadow: 0 0 1em white;
+}
 
-      a{
-        color: black;
-      }
-    }
+#cta-container.text-center{
+  margin-top: 120px;
+}
+
+#cto-button{
+  background-color: rgb(98, 215, 68);
+  border: 2px solid black;
+  box-shadow: 0 0 1em rgba(255, 255, 255, 0.5);
+
+  a{
+    color: black;
+    font-size: 20px;
+    // font-weight: bold;
+  }
 }
 
 #leader-scores{
-  min-height: 100px;
-  // -webkit-transform-style: preserve-3d;
-  //    -moz-transform-style: preserve-3d;
-  //         transform-style: preserve-3d;
-
-  // .align-vertical{
-  //   position: relative;
-  //   top: 50%;
-  //   transform: translateY(-50%);
-  // }
+  padding: 30px 0px;
+  margin: 0 auto;
+  border-bottom: 1px solid rgba(1,1,1,.25);
 }
+
+.fa.center-fa{
+  display: block;
+  text-align: center;
+  font-size: 42px;
+  margin-top: 20px;
+}
+
+
+
 
 .footer {
   margin-top: 30px;
