added toggle effect to hall of fame

--- a/client/stylesheets/game.less
+++ b/client/stylesheets/game.less
@@ -1,4 +1,12 @@
-body {
+#js-game-board{
+  display: block;
+  margin: 0px auto;
+  border: 50px solid rgb(106, 190, 123);
+}
+
+
+
+/*body {
     margin: 0;
 }
 
@@ -119,4 +127,4 @@ canvas {
     display: table-cell;
     width: auto;
     border: 1px solid black;
-}
+}*/
