added better layout to splash html

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -2,5 +2,8 @@ html, body{
   height: 100%;
 }
 body{
-  background-color: rgba(212, 161, 69, .025);
+  background-color: rgba(212, 161, 69, .0125);
+}
+p{
+  font-size: 16px;
 }
