--- a/client/templates/shared/navbar.html
+++ b/client/templates/shared/navbar.html
@@ -1,11 +1,10 @@
 <template name="navbar">
     <!-- navbar -->
-    <nav id="" class="navbar navbar-default" role="navigation">
+    <nav id="" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div id="short-navbar" class="container-fluid">
-          
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only"></span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+              <span class="sr-only">Toggle Navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -13,7 +12,7 @@
             <a class="navbar-brand" href="/">Snake Pit</a>
           </div>
 
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <div id="navigation" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class=""><a href={{pathFor 'menu'}}>Play</a></li>
                 </ul>
