--- a/client/index.less
+++ b/client/index.less
@@ -22,11 +22,13 @@
   right: 0;
   left: 0;
   height: 100%;
+  width: 100%;
   -webkit-filter: contrast(250%) sepia(50%);
      -moz-filter: sepia(60%) contrast(200%);
        -o-filter: sepia(60%) contrast(200%);
          -filter: sepia(60%) contrast(200%);
   box-shadow: inset 1.9em 2.9em 16em 1em rgb(77, 69, 23), inset -16em -2.9em 16em 1em rgb(77, 69, 23);
+  overflow: hidden;
 }
 
 #landing-content{
@@ -59,20 +61,6 @@
     // font-weight: bold;
   }
 }
-
-#leader-scores{
-  padding: 30px 0px;
-  margin: 0 auto;
-  border-bottom: 1px solid rgba(1,1,1,.25);
-}
-
-.fa.center-fa{
-  display: block;
-  text-align: center;
-  font-size: 42px;
-  margin-top: 20px;
-}
-
 
 
 
