--- a/client/templates/game/splash.html
+++ b/client/templates/game/splash.html
@@ -1,4 +1,5 @@
 <template name="splash">
+    {{> navbar}}
     <div  id="landing-main" class="">
         <div id="landing-content" class="container">
             <img id="np-logo" class="img-responsive" src="/Snake_Pit_Logo.png">
@@ -11,71 +12,62 @@
     </div>
     
     <div id="leader-scores" class="container">
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 container-fa">
             <i class="center-fa fa fa-certificate"></i>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 align-vertical ">
-            <h3>43 Hall Of Fame</h3>
+            <h3>43 Current High Score</h3>
         </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 container-fa">
             <i class="center-fa fa fa-user"></i>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 align-vertical">
             <h3>43 Current Players</h3>
         </div>
     </div>
-    
-    <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <h2 class="text-center">What is Snake Pit?</h2>
+    <main class="main-body">
+        <div class="container">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="text-center">How to play Snake Pit?</h2>
+            </div>
         </div>
-    </div>
 
-    <div class="container">
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <!-- <a href="#" class="thumbnail"> -->
-                <i class="center-fa fa fa-trophy"></i>
-            <!-- </a> -->
+        <div class="container">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-centered">
+                <span class="fa-stack fa-lg center-fa">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                </span>
+                <h3 class="text-center">For Starters</h3>
+                <!-- </a> -->
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-centered">
+                <p class="text-center">The game is played with the arrow keys. Be careful not to run into any other snakes or yourself. The other snakes are colored <span style="color:red">red</span> and your food is colored <span style="color: blue;">blue</span>. Guide your snake to eat food while avoiding collisions. You may go through walls and find yourself on the opposite side of the pit. Also gain points by trapping other snakes and ending them.</p>
+            </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="container">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-centered">
+                <span class="fa-stack fa-lg center-fa">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
+                </span>
+                    <h3 class="text-center">Dominate!</h3>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-centered">
+                <p class="text-center">In the snake pit, you will be competing for your survival. Be quick as it becomes increasingly harder to continue the longer you survive. Dominate the other players by feeding your snake the most.</p>
+            </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <!-- <a href="#" class="thumbnail"> -->
-                <i class="center-fa fa fa-check"></i>
-            <!-- </a> -->
+        <div class="container">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-centered">
+                <span class="fa-stack fa-lg center-fa">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-star fa-stack-1x fa-inverse"></i>
+                </span>
+                <h3 class="text-center">Hall of Fame!</h3>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-centered">
+                <p class="text-center">Once it's all laid out on the field, only the most skillful players will rule the Hall of Fame. The ultimate arena is here!</p>
+            </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-    </div>
-    <div class="container">
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <!-- <a href="#" class="thumbnail"> -->
-                <i class="center-fa fa fa-star"></i>
-            <!-- </a> -->
-        </div>
-    <!-- </div> -->
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-    </div>
-
+    </main>
 </template>
