added styling on the input fields

--- a/client/stylesheets/menu.less
+++ b/client/stylesheets/menu.less
@@ -15,3 +15,32 @@
   max-width: 400px;
   margin: 40px auto 0px auto;
 }
+
+#usrname-input.input-group{
+  border: 3px solid;
+  background-color: black;
+
+  .input-group-addon{
+    background-color: black;
+    border: none;
+    border-radius: 0px;
+    i{
+      color: #63d744;
+    }
+  }
+  .signup__input.form-control{
+    background-color: black;
+    border-color: black;
+    color: #3ABD1A;
+  }
+  .input-group-btn{
+    .btn.btn-default{
+      background-color: #63d744;
+      border: none;
+      border-radius: 0px;
+      font-weight: bold;
+    }
+    
+  }
+}
+
