added better styling to the sliding scoreboard

--- a/client/stylesheets/game.less
+++ b/client/stylesheets/game.less
@@ -1,7 +1,20 @@
+.board{
+  margin-top: 60px;
+}
+#canvas-game{
+  width: 652px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #255C30;
+  border: 6px solid;
+}
 #js-game-board{
-  display: block;
-  margin: 0px auto;
-  border: 50px solid rgb(106, 190, 123);
+  // display: block;
+  // margin: 0px auto;
+  border: 50px solid #04370E;
+  padding: 10px;
+  background-color: rgb(48, 30, 30);
+  box-shadow: inset 0 0 1em black;
 }
 
 
