--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -7,3 +7,12 @@ body{
 p{
   font-size: 16px;
 }
+.inline-display{
+  display: inline;
+}
+.floated-left{
+  float: left;
+}
+.floated-right{
+  float: right;
+}
