--- a/client/stylesheets/scoreboard.less
+++ b/client/stylesheets/scoreboard.less
@@ -9,9 +9,25 @@
   top: 40px;
   left: 0;
   height: 100%;
-  background-color: rgba(1, 1, 1, 0.15);
+  // background-color: rgba(1, 1, 1, 0.15);
 }
 
+#expand-leaderboard{
+  // max-width: 200px;
+  max-height: 60px;
+  padding-left: 20px;
+  background-color: black;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  .fa.fa-navicon{
+    font-size: 30px;
+    color: white;
+    padding: 10px;
+  }
+}
 .leaderboard__wrap{
   display: none;
+  height: 100%;
+  background-color: white;
 }
