added a more responsive landing page for bigger screens

--- a/client/stylesheets/splash.less
+++ b/client/stylesheets/splash.less
@@ -1,8 +1,76 @@
-// #leader-scores{
-//   padding: 30px 0px;
-//   margin: 0 auto;
-//   border-bottom: 1px solid rgba(1,1,1,.25);
-// }
+.container{
+  padding: 10px 0px;
+}
+.navbar.navbar-default{
+  margin-bottom: 0px;
+  background-color: black;
+  border: black;
+}
+#short-navbar{
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.min-height{
+  height: 100%;
+  min-height: 100%;
+}
+.optional-height{
+  height: 800px;
+  min-height: 800px;
+}
+
+#landing-main{
+  background: url(http://img33.imageshack.us/img33/2389/adventureconcept3i.jpg) no-repeat center center fixed;
+  background-size: cover;
+  background-color: black;
+  display: block;
+  position: inherit;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  // height: 100%;
+  width: 100%;
+  -webkit-filter: contrast(250%) sepia(50%);
+     -moz-filter: sepia(60%) contrast(200%);
+       -o-filter: sepia(60%) contrast(200%);
+         -filter: sepia(60%) contrast(200%);
+  box-shadow: inset 1.9em 2.9em 16em 1em rgb(77, 69, 23), inset -16em -2.9em 16em 1em rgb(77, 69, 23);
+  overflow: hidden;
+}
+
+#landing-content{
+  // background-color: 
+  width: 100%;
+  // min-height: 100%;
+  bottom: 0;
+  padding-top: 200px;
+  padding-bottom: 25px;
+  margin: auto;
+}
+#np-logo{
+  max-width: 640px;
+  margin: 40px auto;
+  box-shadow: 0 0 1em white;
+}
+
+#cta-container.text-center{
+  margin-top: 120px;
+}
+
+#cto-button{
+  background-color: rgb(98, 215, 68);
+  border: 2px solid black;
+  box-shadow: 0 0 1em rgba(255, 255, 255, 0.5);
+
+  a{
+    color: black;
+    font-size: 20px;
+    // font-weight: bold;
+  }
+}
+
 .main-body{
   padding: 10px 0 30px 0;
 }
