--- a/client/templates/game/splash.html
+++ b/client/templates/game/splash.html
@@ -1,7 +1,7 @@
 <template name="splash">
     {{> navbar}}
     <div  id="landing-main" class="">
-        <div id="landing-content" class="container">
+        <div id="landing-content" class="container min-height">
             <img id="np-logo" class="img-responsive" src="/Snake_Pit_Logo.png">
             <div id="cta-container" class="text-center">
                 <button id="cto-button" class="btn btn-lg">
