added better styling for scoreboard

--- a/client/stylesheets/scoreboard.less
+++ b/client/stylesheets/scoreboard.less
@@ -26,8 +26,25 @@
     padding: 10px;
   }
 }
+
 .leaderboard__wrap{
   display: none;
   height: 100%;
-  background-color: white;
+  box-shadow: 0 0 1em black;
+  // background-color: white;
+  padding: 0px 10px;
+  display: block;
+  background-color: #252529;
+  color: #F1F1F3;
+}
+
+.leaderboard__wrap .green-hover{
+  background-color: #55575A;
+  td{
+    border: 0px;
+  }
+}
+
+.leaderboard__wrap .green-hover:hover{
+  background-color: #8CB843;
 }
