--- a/client/stylesheets/menu.less
+++ b/client/stylesheets/menu.less
@@ -1,3 +1,8 @@
+#np-logo-supage{
+  max-width: 640px;
+  margin: 30px auto;
+  box-shadow: 0 0 1em white;
+}
 #start-game{
   position: absolute;
   top: 0;
