--- a/client/stylesheets/splash.less
+++ b/client/stylesheets/splash.less
@@ -30,7 +30,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  // height: 100%;
+  height: 100%;
   width: 100%;
   -webkit-filter: contrast(250%) sepia(50%);
      -moz-filter: sepia(60%) contrast(200%);
@@ -49,10 +49,22 @@
   padding-bottom: 25px;
   margin: auto;
 }
+
+.snake-img-container{
+  position: relative;
+  max-width: 642px;
+  margin: 20px auto;
+}
 #np-logo{
   max-width: 640px;
-  margin: 40px auto;
+  margin: 0px;
   box-shadow: 0 0 1em white;
+}
+#snake{
+  max-width: 150px;
+  position: absolute;
+  top: -36px;
+  right: 0px;
 }
 
 #cta-container.text-center{
@@ -61,8 +73,9 @@
 
 #cto-button{
   background-color: rgb(98, 215, 68);
-  border: 2px solid black;
-  box-shadow: 0 0 1em rgba(255, 255, 255, 0.5);
+  border: 3px solid black;
+  border-radius: 0px; 
+  box-shadow: 0 0 1em rgba(76, 167, 53, 1);
 
   a{
     color: black;
@@ -71,6 +84,10 @@
   }
 }
 
+#leader-scores{
+  max-width: 900px;
+  margin: 0 auto;
+}
 .main-body{
   padding: 10px 0 30px 0;
 }
