--- a/client/templates/game/game.html
+++ b/client/templates/game/game.html
@@ -2,7 +2,7 @@
   <div class="game-wrap">
     <div class="board">
       <div id="canvas-game">
-        <canvas id="js-game-board" width="500" height="500"></canvas>
+        <div class="canvas-wrapper"><canvas id="js-game-board" width="500" height="500"></canvas></div>
         <div>
           <div class="container">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
