added meteor hacks Kadira

--- a/client/stylesheets/menu.less
+++ b/client/stylesheets/menu.less
@@ -34,7 +34,7 @@
     }
   }
   .signup__input.form-control{
-    background-color: black;
+    background-color: #252529;
     border-color: black;
     color: #3ABD1A;
   }
