set viewport everytime

--- a/client/templates/game/splash.html
+++ b/client/templates/game/splash.html
@@ -7,9 +7,7 @@
                 <img id="snake" src="/snake.png">
             </div>
             <div id="cta-container" class="text-center">
-                <button id="cto-button" class="btn btn-lg">
-                    <a href={{pathFor 'menu'}}>Join Game</a>
-                </button>
+                <a id="cto-button" class="btn btn-lg" href={{pathFor 'menu'}}>Join Game</a>
             </div>
         </div>
     </div>
